--- a/action.yml
+++ b/action.yml
@@ -16,5 +16,24 @@ inputs:
     required: false
     default: '0.00'
 runs:
-  using: 'node12'
-  main: 'index.js'
+  using: 'composite'
+  steps:
+    - name: Compare scores and RickRoll
+      shell: bash
+      run: |
+        NEW_SCORE=${{ inputs.new_score }}
+        PREV_SCORE=${{ inputs.previous_score }}
+        
+        echo "📊 Scores de mutation:"
+        echo "  Précédent: $PREV_SCORE"
+        echo "  Nouveau: $NEW_SCORE"
+        
+        # Comparaison des scores (utilise bc pour les nombres décimaux)
+        if (( $(echo "$NEW_SCORE < $PREV_SCORE" | bc -l) )); then
+          echo "❌ Le score a baissé!"
+          echo -e "\n🎵 Never gonna give you up... 🎵\n"
+          echo "Voir les détails : https://user-images.githubusercontent.com/37572049/90699500-0cc3ec00-e2a1-11ea-8d13-989526e86b0e.gif"
+          exit 1
+        else
+          echo "✅ Le score est maintenu ou amélioré!"
+        fi
